[package]

name = "yaxpeax-sm83"
version = "0.2.0"
authors = [ "iximeow <me@iximeow.net>" ]
license = "0BSD"
repository = "http://git.iximeow.net/yaxpeax-sm83/"
description = "sm83 decoder for the yaxpeax project"
keywords = ["diassembler", "gameboy", "gbc", "sm83", "lr35902"]
edition = "2021"

[dependencies]
yaxpeax-arch = { version = "0.2.3", default-features = false, features = [] }
"serde" = { version = "1.0", optional = true }
"serde_derive" = { version = "1.0", optional = true }
"num_enum" = { version = "0.2", default-features = false }

[[test]]
name = "test"
path = "test/test.rs"

[features]
default = []

use-serde = []

[profile.release]
lto = "yes"

[[example]]
name = "length_decode"
crate-type = ["cdylib"]

[[example]]
name = "inst_decode"
crate-type = ["cdylib"]

[[example]]
name = "empty"
crate-type = ["cdylib"]
